Доработка асинхронной работы с bucket4j

--- a/client/build.gradle
+++ b/client/build.gradle
@@ -5,6 +5,6 @@ plugins {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation group: 'com.github.vladimir-bukhtoyarov', name: 'bucket4j-core', version: '7.6.0'
+    implementation group: 'com.bucket4j', name: 'bucket4j-core', version: '8.1.0'
     implementation project(':model')
 }
